# cuda-cloud

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
assets/shaders/: default_fragment.glsl  default_vertex.glsl  density_fragment.glsl  gpass_fragment.glsl  gpass_vertex.glsl  noise_fragment.glsl  noise_vertex.glsl  quantize_fragment.glsl  quantize_vertex.glsl  screen_fragment.glsl  screen_vertex.glsl  vanilla_fragment.glsl  vanilla_vertex.glsl
cmake/: imgui.cmake
src/: CMakeLists.txt  main.cpp  main.cu
src/core/: CMakeLists.txt  application.cpp  application.hpp  input.cpp  input.hpp
src/cuda/: CMakeLists.txt  cudaglbuffer.cu  cudaglbuffer.cuh  worleyalgorithm.cuh
src/graphics/: CMakeLists.txt  material.hpp  mesh.cpp  mesh.hpp  register.hpp  resource.hpp  shader.cpp  shader.hpp  texture2d.cpp  texture2d.hpp
src/noise/: CMakeLists.txt  worleynoise.cpp  worleynoise.hpp
src/pipeline/: CMakeLists.txt  graph.hpp  graphbuilder.cpp  graphbuilder.hpp  graphcontext.hpp  graphnodedescriptor.cpp  graphnodedescriptor.hpp  nodeexecutor.hpp  renderqueue.hpp
src/ui/: CMakeLists.txt  imguilayer.cpp  imguilayer.hpp
